gke/production/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: protesto-aquisicao-prod
  labels:
    name: protesto-aquisicao-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pa-api-tubo-sp-prod
  namespace: protesto-aquisicao-prod
spec:
  selector:
    matchLabels:
      app: pa-api-tubo-sp-prod
  template:
    metadata:
      labels:
        app: pa-api-tubo-sp-prod
        squad: protesto-aquisicao
        type: api
        value-stream: data
        environment: production
        elastic-logs: "true"
    spec:
      volumes:
      - name: elastic-apm-agent 
        emptyDir: {}
      containers:
      - name: pa-api-tubo-sp-prod
        image: gcr.io/bvs-main-98cb/pa-api-tubo-sp-prod
        resources:
          requests:
            memory: "1000Mi"
            cpu: "400m"
          limits:
            memory: "2000Mi"
            cpu: "800m"
        imagePullPolicy: Always
        volumeMounts:
        - name: elastic-apm-agent 
          mountPath: /elastic/apm/agent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pa-api-tubo-sp-prod
  namespace: protesto-aquisicao-prod
spec:
  ports:
  - name: http    
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: pa-api-tubo-sp-prod
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pa-ingress-interno-tubo-sp-prod
  namespace: protesto-aquisicao-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: iapi-prod-tubosp.bvsnet.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: pa-api-tubo-sp-prod
          servicePort: 80
  tls:
  - hosts:
    - iapi-prod-tubosp.bvsnet.com.br
    secretName: pa-bvsnet-tls-prod
